[package]
name = "useless-box"
version = "0.1.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
edition = "2021"

[dependencies]
stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f103" ] }
nb = "1"
stm32f1 = "0.14.0"
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
bitflags = "1.3.2"
void = { default-features = false, version = "1.0.2" }
embedded-hal = { features = ["unproven"], version = "0.2.7" }
# panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
# panic-itm = "0.4.1"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.3.7"

