[package]
name = "useless-box"
version = "0.1.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
edition = "2021"

[dependencies]
stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f103" ] }
nb = "1"
stm32f1 = "0.14.0"
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-rtic = "1.1.2"
cortex-m-semihosting = "0.3.7"
bitflags = "1.3.2"
bare-metal = "1.0.0"
embedded-hal = "0.2.6"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"


[profile.release]
opt-level = 'z'
lto = true