[package]
name = "useless-box"
version = "0.1.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
edition = "2021"

[dependencies]
stm32f1xx-hal = { version = "0.9.0", features = ["rt", "stm32f103" ] }
nb = "1"
stm32f1 = "0.14.0"
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-rtic = "1.1.2"
cortex-m-semihosting = "0.3.7"
bitflags = "1.3.2"
bare-metal = "1.0.0"
embedded-hal = "0.2.6"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3 # <-
overflow-checks = false # <-
